# capy-dispatchq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  capy-dispatchq.pc.in
build-dehancer/: capy-dispatchq.pc
include/: capy_dispatchq.hpp
include/capy/: dispatchq.h
src/: capy_dispatchq.cpp  dispatchq.cc
utests/: CMakeLists.txt  test_queue.cc  test_queue.cpp
